# fc-feature-matrix

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONCEPT_VISUAL.html  DESIGN.md  FEATURE_MATRIX_INTERACTIVE.html  PROJECT_CONTEXT.md  README.md  brainstorm.md  capture.mjs  club-detail.html  crawl_sites.mjs  drizzle.config.ts  eslint.config.mjs  feature-matrix.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  recapture-f1.mjs  recapture.mjs  recapture2.mjs  tsconfig.json  vercel.json  vitest.config.ts
scanner/: .gitignore  CHANGELOG-V2.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt
scanner/capture/: __init__.py  banner_verify.py  browser.py  capture.py  cookies.py  credentials.py  dom_intel.py  form_dummy.py  login.py  text_fetch.py
scanner/config/: areas.json  loader.py  reseller_urls.json  schema.py
scanner/flow/: discover.py  schema.py  validate.py
scanner/output/: CHROME-MCP-NEEDED.md  capture-run-log-hospitality-chelsea-20260427T154348Z.json  capture-run-log-hospitality-mancity-20260427T154233Z.json  capture-run-log-hospitality-mancity-synthetic.json  capture-run-log-hospitality-psg-20260427T154307Z.json  capture-run-log-hospitality-psg-synthetic.json  capture-run-log-hospitality-realmadrid-20260427T154244Z.json  capture-run-log-hospitality-tottenham-20260427T154013Z.json  contact-report-hospitality.html  opus-bbox-calibration.json
scanner/report/: contact_sheet.py
scanner/scoring/: package.json  recalculate.js  recalculate.test.js
scanner/scripts/: __init__.py  calibrate_opus_bbox.py  derive_results_json.py  extract_rubric.py  run_manual_screenshots_wave.py  run_synthetic_wave.py  run_text_capture.py  run_vision_wave.py
scanner/tests/: conftest.py  test_areas_schema.py  test_banner_verify.py  test_browser.py  test_calibrate_opus_bbox.py  test_capture_orchestrator.py  test_cli.py  test_contact_sheet.py  test_cookies.py  test_credentials.py  test_derive_results_json.py  test_dom_detect.py  test_dry_run.py  test_extract_rubric.py  test_flow_discover.py  test_flow_schema.py  test_flow_schema_overrides.py  test_flow_validate.py  test_login.py  test_no_area_coupling.py  test_run_vision_wave.py  test_slice.py  test_slice_cli_features_evidence_dir.py  test_text_fetch.py  test_vision_apikey.py  test_vision_client.py  test_vision_disagreement.py  test_vision_factory.py  test_vision_judge.py  test_vision_schema.py  test_vision_subscription.py
scanner/vision/: client.py  client_apikey.py  client_subscription.py  disagreement.py  dom_detect.py  factory.py  judge.py  prompts.py  schema.py  (+1 more)
(+366 files in other folders)
