[project]
name = "fc-benchmark-scanner"
version = "0.1.0"
description = "Area-agnostic flow-capture scanner for FC Benchmark (dual-backend vision: claude-agent-sdk subscription + anthropic SDK api-key)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pydantic>=2.5",
  "playwright>=1.49,<2",
  "jinja2>=3.1",
  "pillow>=10.3,<12",
  "claude-agent-sdk>=0.1",
  "anthropic>=0.40",
  "python-dotenv>=1.0",
  "rich>=13",
  "numpy>=1.26",
  # Plan 02-15 Wave A — anti-bot fingerprint masks for Playwright (stealth).
  # Reduces Cloudflare Turnstile / "headless detected" false positives that
  # forced 30 deferred Chrome MCP steps in Plan 02-11.
  "playwright-stealth>=1.1",
  "patchright>=1.49",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
  "pytest-asyncio>=0.23",
]

[project.scripts]
scanner = "scanner.__main__:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[tool.pytest.ini_options]
testpaths = ["scanner/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end dry-run tests (may be slower)",
  "live: tests that call the real Anthropic or claude-agent-sdk backend (not run in CI)",
]
